Project 0/force-app/main/default/objects/Game__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <label>Developer</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>