Project 0/force-app/main/default/objects/Game__c/fields/DeveloperAccount__c.field-meta.xml
<CustomField>
    <fullName>DeveloperAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DeveloperAccount</label>
    <referenceTo>Game_Account__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <type>Lookup</type>
</CustomField>