Project 0/force-app/main/default/objects/Game__c/fields/Game_Approval__c.field-meta.xml
<CustomField>
    <fullName>Game_Approval__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Game Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>