Project 0/force-app/main/default/objects/Game__c/fields/Game_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Game_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game_Lookup</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <type>Lookup</type>
</CustomField>