Project 0/force-app/main/default/objects/Game__c/fields/Game_User_Rating__c.field-meta.xml
<CustomField>
    <fullName>Game_User_Rating__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Game User Rating</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>