Project 0/force-app/main/default/objects/Game__c/fields/Game_User_Rating_LU__c.field-meta.xml
<CustomField>
    <fullName>Game_User_Rating_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game User Rating LU</label>
    <referenceTo>Game_Reviews__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <type>Lookup</type>
</CustomField>