Project 0/force-app/main/default/objects/Game__c/fields/Games__c.field-meta.xml
<CustomField>
    <fullName>Games__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Games</label>
    <referenceTo>My_Games__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <type>Lookup</type>
</CustomField>