Project 0/force-app/main/default/objects/Game__c/listViews/Game_Order_Approvers_Game.listView-meta.xml
<ListView>
    <fullName>Game_Order_Approvers_Game</fullName>
    <filterScope>Queue</filterScope>
    <label>Game Order Approvers</label>
    <queue>Game_Order_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>